; ModuleID = '/home/carl/AnghaBench/tig/src/extr_graph-v2.c_colors_get_color.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_graph-v2.c_colors_get_color.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.colors = type { i32 }
%struct.id_color = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.colors*, i8*)* @colors_get_color to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @colors_get_color(%struct.colors* %0, i8* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca %struct.colors*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.id_color*, align 8
  %7 = alloca %struct.id_color*, align 8
  store %struct.colors* %0, %struct.colors** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = call %struct.id_color* @id_color_new(i8* %8, i32 0)
  store %struct.id_color* %9, %struct.id_color** %6, align 8
  %10 = load %struct.colors*, %struct.colors** %4, align 8
  %11 = getelementptr inbounds %struct.colors, %struct.colors* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.id_color*, %struct.id_color** %6, align 8
  %14 = call i64 @htab_find(i32 %12, %struct.id_color* %13)
  %15 = inttoptr i64 %14 to %struct.id_color*
  store %struct.id_color* %15, %struct.id_color** %7, align 8
  %16 = load %struct.id_color*, %struct.id_color** %6, align 8
  %17 = call i32 @id_color_delete(%struct.id_color* %16)
  %18 = load %struct.id_color*, %struct.id_color** %7, align 8
  %19 = icmp eq %struct.id_color* %18, null
  br i1 %19, label %20, label %21

20:                                               ; preds = %2
  store i64 -1, i64* %3, align 8
  br label %25

21:                                               ; preds = %2
  %22 = load %struct.id_color*, %struct.id_color** %7, align 8
  %23 = getelementptr inbounds %struct.id_color, %struct.id_color* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  store i64 %24, i64* %3, align 8
  br label %25

25:                                               ; preds = %21, %20
  %26 = load i64, i64* %3, align 8
  ret i64 %26
}

declare dso_local %struct.id_color* @id_color_new(i8*, i32) #1

declare dso_local i64 @htab_find(i32, %struct.id_color*) #1

declare dso_local i32 @id_color_delete(%struct.id_color*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
